[SC-7094] fix scrolling on iOS

--- a/src/personal-finance/pages/accounts/accounts.component.less
+++ b/src/personal-finance/pages/accounts/accounts.component.less
@@ -23,6 +23,8 @@
     .quovo-accounts-module {
         height: 100%;
         width: 100%;
+        overflow: auto;
+        -webkit-overflow-scrolling:touch;
     }
 
     .content-wrap {
